--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,3 +1,16 @@
+# ╔──────────────────────────────────────────────¤◎¤──────────────────────────────────────────────╗
+# |		CommandeS 
+# 		✩ Docker build -t wordpress_image .  
+#       ✩ Pour lancer le docker solo :docker run -it wordpress_image 
+#       ✩ Docker run -it --rm -p 443:443 wordpress_image nginx -g "daemon off;"
+#       ✩ rentrer de force :docker exec -it <nom_du_conteneur_nginx> /bin/sh
+# 
+# 		Consignes:
+#		✩ php-fpm (installé et configuré) uni- quement sans nginx.
+# ╚──────────────────────────────────────────────¤◎¤──────────────────────────────────────────────╝
+
+
+
 # Utilise l'image officielle de WordPress
 FROM wordpress:latest
 
