--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -15,7 +15,7 @@ services:
 
       volumes:
         - ./requirements/nginx/conf/nginx.conf:/etc/nginx/nginx.conf
-        # - ./requirements/wordpress/html:/var/www/wordpress
+        - wordpress_data:/var/www/wordpress
       ports:
       - "443:443"
       # restart: always
@@ -23,28 +23,51 @@ services:
       # depends_on:
 
 # utilise l'image officiel
-  # mariadb:
-  #   image: mariadb
-  #   restart: always
-  #   environment:
-  #     MARIADB_ROOT_PASSWORD: example
-  #   # ports:
-  #   #   - "3306:3306"
-    
-  # adminer:
-  #   image: adminer
-  #   restart: always
-  #   ports:
-  #     - 8080:8080
+  mariadb:
+    image: mariadb
+    restart: always
+    environment:
+      MARIADB_ROOT_PASSWORD: ${MARIADB_ROOT_PASSWORD}
+      MARIADB_PASSWORD: ${MARIADB_PASSWORD}
+      MARIADB_DATABASE: ${MARIADB_DATABASE}
+      MARIADB_USER: ${MARIADB_USER}
+
+      WORDPRESS_URL: ${WORDPRESS_URL}
+      WORDPRESS_TITLE: ${WORDPRESS_TITLE}
+      WORDPRESS_ADMIN_NAME: ${WORDPRESS_ADMIN_NAME}
+      WORDPRESS_ADMIN_PASSWORD: ${WORDPRESS_ADMIN_PASSWORD}
+      WORDPRESS_ADMIN_EMAIL: ${WORDPRESS_ADMIN_EMAIL}
+
+      WORDPRESS_USER_NAME: ${WORDPRESS_USER_NAME}
+      WORDPRESS_USER_EMAIL: ${WORDPRESS_USER_EMAIL}
+      WORDPRESS_USER_PASSWORD: ${WORDPRESS_USER_PASSWORD}
+
+    # ports:
+    #   - "3306:3306"
+
 
   wordpress:
     build:
         context: ./requirements/wordpress
-    entrypoint:
-
     volumes:
-      - ./data:/var/www/wordpress
-      # prepare le dossier wordpress dans www....avec tout dedans et nous montre ce qui ya dedans avec la partie de gauche
+      - wordpress_data:/var/www/wordpress
+    environment:
+      - 
+      
+volumes:
+  wordpress_data:  # Volume nommé pour partager les données entre WordPress et Nginx
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: /tmp/data/wordpress   # Le chemin local sur l'hôte pour stocker les données
+
+  mariadb_data:  # Volume pour la base de données MariaDB
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: /tmp/data/mariadb   # Le chemin local sur l'hôte pour les données MariaDB
 
 
 
