--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -14,20 +14,40 @@ http {
 			ssl_certificate /etc/nginx/ssl/inception.crt;
 			ssl_certificate_key /etc/nginx/ssl/inception.key;
 
-			# root /var/www/wordpress;
-			root /var/www/html;
-			index index.html;
-			# echo "<h1>Welcome to NGINX</h1>" > /var/www/html/index.html
+			# Définir le répertoire racine pour WordPress
+			root /var/www/wordpress;  # Dossier où WordPress est installé (utilisez le volume partagé avec WordPress)
 
-			server_name localhost;
 			index index.php index.html index.htm;
 
-			location / 
-			{
-				# try_files $uri $uri/ =404;
-				try_files $uri $uri/ /index.php$is_args$args;
+			# Gestion des fichiers statiques
+			location / {
+				try_files $uri $uri/ /index.php?$args;
 			}
-			
+
+			# Traitement des fichiers PHP via PHP-FPM
+			location ~ \.php$ {
+				include snippets/fastcgi-php.conf;  # Fichier de configuration PHP par défaut
+				fastcgi_pass wordpress:9000;  # Connexion au service PHP-FPM (le service 'wordpress' dans docker-compose)
+				fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+				include fastcgi_params;
+			}
+
+			# Configuration pour le dossier wp-content/uploads (pour les fichiers médias)
+			location ~* /wp-content/uploads/ {
+				try_files $uri $uri/ =404;
+			}
+
+			# Désactivation de l'accès direct aux fichiers .htaccess et autres fichiers cachés
+			location ~ /\. {
+				deny all;
+			}
+
+			# Configuration pour la gestion des erreurs
+			error_page 404 /404.html;
+			location = /404.html {
+				root /var/www/wordpress;
+			}
+					
 			# bloc php avec wordpress
 			# location ~ \.php$ {
 			# 	fastcgi_split_path_info ^(.+\.php)(/.+)$; # This is a regular expression that captures the PHP file and the rest of the URI. The $fastcgi_script_name variable is then set to the PHP file, and the $fastcgi_path_info variable is set to the rest of the URI.
