--- a/srcs/.env.example
+++ b/srcs/.env.example
@@ -2,17 +2,17 @@ VOLUME_PATH="/tmp/data"
 WP_VOLUME_PATH=$VOLUME_PATH + "/wordpress"
 MARIA_VOLUME_PATH=$VOLUME_PATH + "/wordpress"
 
-MARIADB_ROOT_PASSWORD="plop42"
-MARIADB_PASSWORD="wordpress42"
+MARIADB_ROOT_PASSWORD="x"
+MARIADB_PASSWORD="x"
 MARIADB_DATABASE="wordpress"
 MARIADB_USER="angela"
 
 WORDPRESS_URL="angnguye.42.fr"
 WORDPRESS_TITLE="Inception"
 WORDPRESS_ADMIN_NAME="groot"
-WORDPRESS_ADMIN_PASSWORD="groot"
+WORDPRESS_ADMIN_PASSWORD="x"
 WORDPRESS_ADMIN_EMAIL="groot@email.ch"
 
 WORDPRESS_USER_NAME="kiki"
 WORDPRESS_USER_EMAIL="kiki@email.ch"
-WORDPRESS_USER_PASSWORD="kiki"
+WORDPRESS_USER_PASSWORD="x"
