--- a/srcs/.env
+++ b/srcs/.env
@@ -1,11 +1,10 @@
 VOLUME_PATH="/tmp/data"
-WP_VOLUME_PATH=$VOLUME_PATH + "/wordpress"
-MARIA_VOLUME_PATH=$VOLUME_PATH + "/wordpress"
-
-MARIADB_ROOT_PASSWORD="plop42"
-MARIADB_PASSWORD="wordpress42"
-MARIADB_DATABASE="wordpress"
-MARIADB_USER="angela"
+WP_VOLUME_PATH="${VOLUME_PATH}/wordpress"
+MARIA_VOLUME_PATH="${VOLUME_PATH}/mariadb"
+MARIADB_ROOT_PASSWORD=plop42
+MARIADB_PASSWORD=wordpress42
+MARIADB_DATABASE=wordpress
+MARIADB_USER=angela
 
 WORDPRESS_URL="angnguye.42.fr"
 WORDPRESS_TITLE="Inception"
