--- a/srcs/.env.example
+++ b/srcs/.env.example
@@ -1,4 +1,5 @@
-VOLUME_PATH="/tmp/data"
+VOLUME_PATH="/home/angnguye/data"
+# VOLUME_PATH="/tmp/data"
 WP_VOLUME_PATH=$VOLUME_PATH + "/wordpress"
 MARIA_VOLUME_PATH=$VOLUME_PATH + "/wordpress"
 
