--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -63,15 +63,16 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: /tmp/data/wordpress   # Le chemin local sur l'hôte pour stocker les données
+      device: /angnguye/data/wordpress   # Le chemin local sur l'hôte pour stocker les données
+      # device: /tmp/data/wordpress
 
   mariadb_data:  # Volume pour la base de données MariaDB
     driver: local
     driver_opts:
       type: none
       o: bind
-      device: /tmp/data/mariadb   # Le chemin local sur l'hôte pour les données MariaDB
-
+      device: /angnguye/data/mariadb   # Le chemin local sur l'hôte pour les données MariaDB
+      # device: /tmp/data/mariadb
 networks:
   inception:
     name: inception
